docs: rewrite README with formal bilingual layout and real author links
- Rewrite as formal bilingual (Chinese/English) documentation
- Add real Bilibili and Douyin author accounts
- Restore Obsession (痴迷) 2026 film inspiration credit